начал работу над озвучиванием слов

--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>hackEnglish</title>
-    <link href="https://fonts.googleapis.com/css?family=Inria+Serif:300i,400&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.css">
     <link rel="stylesheet" href="css/style.css">
 </head>
@@ -32,13 +32,14 @@
         </nav>
 
         <section class="word-meaning container">
-            <h1 class="word" id="word">Motivation</h1>
-            <p class="word__describe" id="word__describe">People often need motivation to do tasks they'd prefer not to do. Do you work? Your motivation is your paycheck. Lost something? Finding it may provide motivation to tidy the house.</p>
+            <h1 class="word" id="word"></h1>
+            <p class="word__describe" id="word__describe"></p>
             <a href="#" class="word-meaning--text">Добавить слово <i class="icon__word fas fa-plus"></i></a>
         </section>
    </div>
    
 
    <!-- <script src="js/index.js"></script> -->
+   <script src="https://code.responsivevoice.org/responsivevoice.js?key=G6nXh2vR"></script>
 </body>
 </html>
